2006-01-25  Kevin Till<ktill@zmanda.com>
	* server-src/amadmin.c:	fix for sourceforge bug 1412698
				add missing parameters to "amadmin x disklist"

2006-01-25  Kevin Till<ktill@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: fix formatting (<para> is not compatible with some tag)
					    add supported auth types.

2006-01-25  Kevin Till<ktill@zmanda.com>
	* common-src/bsd-security.c: move check_security to bsd_security.c, fix faulty return
				     Thanks to Paul Bijnens
	* restore-src/amidxtaped.c:  ditto
	* server-src/amindexd.c:     ditto and no need to tell client about reason for denial
	* common-src/amanda.h:       add proto of check_security
	* server-src/conffile.c:     don't list CRYPT in the summary report for now
	* restore-src/restore.c:     set outfd correctly for amfetchdump cases
				     Thanks to Paul Bijnens

2006-01-24  Ian Turner <ian@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Put documentation of 
	  split-dump options in the right place. Thanks to Paul Bijnens 
	  <pbijnens@users.sourceforge.net> for the fix.
	* man/xml-source/amanda.8.xml: ditto.

2006-01-23  Ian Turner <ian@zmanda.com>
	* server-src/taperscan.c (find_brand_new_tape_label): Start 
	  brand new tape labels at 1 instead of 0. Thanks to Paul 
	  Bijnens <pbijnens@users.sourceforge.net> for the fix.

2006-01-18  Jean-Louis Martineau <martineau@zmanda.com>
	* Amanda 2.5.0b2 released.
	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.5.0b2).
	* NEWS: Update for 2.5.0b2
	
2006-01-15  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/disk_history.c: Fix memory leak.

2006-01-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsd-security.c: Fix memory leak.
	* common-src/tapelist.c: Fix memory leak.
	* restore-src/amidxtaped.c: Fix memory leak.
	* restore-src/restore.c: Fix memory leak.
	* server-src/amindexd.c: Fix memory leak.
	* server-src/conffile.c: Fix memory leak.
	* server-src/disk_history.c: Fix memory leak.
	* server-src/find.c: Fix memory leak.
